Lots of changes read discription, added - seperate Hangfire log for better readability of the main log - enabled the hangfire dashboard and added a daily job so the admins know that the uc alert tool is online - added a shortcut link to the main navbar to the hangfire dashboard - replaced in the testing controller the normal sync processing by the hangfire async code, so it has the same behavior as the normal 'send alert' function - required tags on the emailsubject and emailbody in the emailviewmodel
Removed
- the manaul smtp serverURL because it is now handled by the email function

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Functions\SMS\Sending.cs" />
     <Compile Include="Functions\Storingen\Get.cs" />
     <Compile Include="Functions\Tijd\GetTime.cs" />
+    <Compile Include="Functions\Webserver\FeedbackMessage.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
