--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -19,9 +19,22 @@
       <level value="ALL" />
       <appender-ref ref="GeneralAppender" />
     </root>
+    <logger additivity="false" name="Hangfire">
+      <level value="INFO" />
+      <appender-ref ref="HangfireLoggerAppender" />
+    </logger>>
     <appender name="GeneralAppender" type="log4net.Appender.FileAppender">
       <threshold value="Info" />
       <file value="c:\logs\Logfile.log" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger %u - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="HangfireLoggerAppender" type="log4net.Appender.FileAppender">
+      <threshold value="Info" />
+      <file value="c:\logs\Backgroundtasks.log" />
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
@@ -35,18 +48,6 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="log4net.Internal.Debug" value="true" />
-    
-    <!--This part will not be used, and is only for information purposes -->
-    <add key="SMSGatewayIP" value="172.0.0.1" />
-    <add key="SMSGatewayUsername" value="admin" />
-    <add key="SMSGatewayPassword" value="adminPassword" />
-    <add key="EmailServerIP" value="mail.ucsystems.net" />
-    <add key="EmailServerPort" value="25" />
-    <add key="EmailSendingMailAddress" value="test@ucsystems.nl" />
-    <add key="SignatureDirectory" value="~/signature" />
-    <add key="signaturePath" value="/signature/signaturelogo.png" />
-    <add key="SignatureImage" value="signaturelogo.png" />
-    <add key="SignatureText" value="Met vriendelijke groet, Het UC Systems team" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
