added a authorize tag to the hangfire dashboard

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -22,7 +22,7 @@
     <logger additivity="false" name="Hangfire">
       <level value="INFO" />
       <appender-ref ref="HangfireLoggerAppender" />
-    </logger>>
+    </logger>&gt;
     <appender name="GeneralAppender" type="log4net.Appender.FileAppender">
       <threshold value="Info" />
       <file value="c:\logs\Logfile.log" />
