--- a/UC alert tool/packages.config
+++ b/UC alert tool/packages.config
@@ -7,6 +7,7 @@
   <package id="FontAwesome" version="4.7.0" targetFramework="net452" />
   <package id="Hangfire" version="1.6.9" targetFramework="net452" />
   <package id="Hangfire.Core" version="1.6.9" targetFramework="net452" />
+  <package id="Hangfire.Dashboard.Authorization" version="2.1.0" targetFramework="net452" />
   <package id="Hangfire.SqlServer" version="1.6.9" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
