added dynamic text for the homepage

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -416,6 +416,7 @@
     <Content Include="Views\Shared\_MessagePartial.cshtml" />
     <Content Include="Views\Shared\_MeldingPartial.cshtml" />
     <Content Include="Views\Shared\_RapporterenSummeryPartial.cshtml" />
+    <Content Include="Views\Instellingen\homepage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
