--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -25,7 +25,7 @@
     </logger>&gt;
     <appender name="GeneralAppender" type="log4net.Appender.FileAppender">
       <threshold value="Info" />
-      <file value="c:\logs\Logfile.log" />
+      <file value="logs\Logfile.log" />
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
@@ -34,7 +34,7 @@
     </appender>
     <appender name="HangfireLoggerAppender" type="log4net.Appender.FileAppender">
       <threshold value="Info" />
-      <file value="c:\logs\Backgroundtasks.log" />
+      <file value="logs\Backgroundtasks.log" />
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
