--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -13,6 +13,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124515.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124515&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HangfireConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UC alert tool-Hangfire.mdf;Initial Catalog=aspnet-UC alert tool-Hangfire;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="alertDatabaseEntities" connectionString="metadata=res://*/Models.AlertToolModel.csdl|res://*/Models.AlertToolModel.ssdl|res://*/Models.AlertToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;PERSIST SECURITY INFO=True;initial catalog=alertDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="supportcenterEntities" connectionString="metadata=res://*/Models..csdl|res://*/Models..ssdl|res://*/Models..msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dc-134.ucsystems.net;initial catalog=supportcenter;persist security info=True;user id=alerttool;password=fghk#rtm6890yu4jm%30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <log4net>
     <root>
@@ -23,25 +24,7 @@
       <level value="INFO" />
       <appender-ref ref="HangfireLoggerAppender" />
     </logger>&gt;
-    <appender name="GeneralAppender" type="log4net.Appender.FileAppender">
-      <threshold value="Info" />
-      <file value="logs\Logfile.log" />
-      <appendToFile value="true" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger %u - %message%newline" />
-      </layout>
-    </appender>
-    <appender name="HangfireLoggerAppender" type="log4net.Appender.FileAppender">
-      <threshold value="Info" />
-      <file value="logs\Backgroundtasks.log" />
-      <appendToFile value="true" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger %u - %message%newline" />
-      </layout>
-    </appender>
-  </log4net>
+    <appender name="GeneralAppender" type="log4net.Appender.FileAppender"><threshold value="Info" /><file value="logs\Logfile.log" /><appendToFile value="true" /><lockingModel type="log4net.Appender.FileAppender+MinimalLock" /><layout type="log4net.Layout.PatternLayout"><conversionPattern value="%date [%thread] %level %logger %u - %message%newline" /></layout></appender><appender name="HangfireLoggerAppender" type="log4net.Appender.FileAppender"><threshold value="Info" /><file value="logs\Backgroundtasks.log" /><appendToFile value="true" /><lockingModel type="log4net.Appender.FileAppender+MinimalLock" /><layout type="log4net.Layout.PatternLayout"><conversionPattern value="%date [%thread] %level %logger %u - %message%newline" /></layout></appender></log4net>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
