added a function thats sync all databases from sharepoint to sql server

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Functions\Email\Sending.cs" />
     <Compile Include="Functions\Email template\Set.cs" />
     <Compile Include="Functions\Files\GeneralFiles.cs" />
+    <Compile Include="Functions\Formatting\SharepointFormatting.cs" />
     <Compile Include="Functions\Helpdesk\Get.cs" />
     <Compile Include="Functions\html formatting\Replace.cs" />
     <Compile Include="Functions\Recipients\Email\Get.cs" />
