content of website 5-6-2017

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Controllers\TestersController.cs" />
     <Compile Include="Functions\Appsettings\Edit.cs" />
     <Compile Include="Functions\Appsettings\Get.cs" />
+    <Compile Include="Functions\Database\Get.cs" />
     <Compile Include="Functions\Email\Information.cs" />
     <Compile Include="Functions\Email\Sending.cs" />
     <Compile Include="Functions\Email template\Set.cs" />
